parser.output
State 7 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: ε
    3          | stmt_list stmt

    4 stmt: simple_stmt
    5     | compound_stmt

    6 simple_stmt: assign_stmt
    7            | print_stmt
    8            | return_stmt

    9 assign_stmt: IDENT ASSIGN expr

   10 print_stmt: KW_PRINT LPAREN expr RPAREN

   11 return_stmt: KW_RETURN expr
   12            | KW_RETURN

   13 compound_stmt: if_stmt
   14              | while_stmt
   15              | func_def

   16 if_stmt: KW_IF expr COLON block elif_list opt_else

   17 elif_list: ε
   18          | elif_list elif_clause

   19 elif_clause: KW_ELIF expr COLON block

   20 opt_else: ε
   21         | KW_ELSE COLON block

   22 while_stmt: KW_WHILE expr COLON block

   23 func_def: KW_DEF IDENT LPAREN opt_params RPAREN COLON block

   24 block: LBRACE stmt_list RBRACE

   25 opt_params: ε
   26           | param_list

   27 param_list: IDENT
   28           | param_list COMMA IDENT

   29 expr: or_expr

   30 or_expr: and_expr
   31        | or_expr TOK_OR and_expr

   32 and_expr: not_expr
   33         | and_expr TOK_AND not_expr

   34 not_expr: comparison_expr
   35         | TOK_NOT not_expr

   36 comparison_expr: add_expr
   37                | comparison_expr TOK_EQ add_expr
   38                | comparison_expr TOK_NE add_expr
   39                | comparison_expr TOK_LT add_expr
   40                | comparison_expr TOK_LE add_expr
   41                | comparison_expr TOK_GT add_expr
   42                | comparison_expr TOK_GE add_expr

   43 add_expr: mult_expr
   44         | add_expr TOK_PLUS mult_expr
   45         | add_expr TOK_MINUS mult_expr

   46 mult_expr: unary_expr
   47          | mult_expr TOK_STAR unary_expr
   48          | mult_expr TOK_SLASH unary_expr
   49          | mult_expr TOK_MOD unary_expr

   50 unary_expr: primary_expr
   51           | TOK_MINUS unary_expr

   52 primary_expr: INT_LIT
   53             | BOOL_LIT
   54             | IDENT
   55             | call_expr
   56             | LPAREN expr RPAREN

   57 call_expr: IDENT LPAREN opt_args RPAREN

   58 opt_args: ε
   59         | arg_list

   60 arg_list: expr
   61         | arg_list COMMA expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KW_IF (258) 16
    KW_ELIF (259) 19
    KW_ELSE (260) 21
    KW_WHILE (261) 22
    KW_DEF (262) 23
    KW_RETURN (263) 11 12
    KW_PRINT (264) 10
    TOK_AND (265) 33
    TOK_OR (266) 31
    TOK_NOT (267) 35
    TOK_EQ (268) 37
    TOK_NE (269) 38
    TOK_LT (270) 39
    TOK_LE (271) 40
    TOK_GT (272) 41
    TOK_GE (273) 42
    TOK_PLUS (274) 44
    TOK_MINUS (275) 45 51
    TOK_STAR (276) 47
    TOK_SLASH (277) 48
    TOK_MOD (278) 49
    ASSIGN (279) 9
    LPAREN (280) 10 23 56 57
    RPAREN (281) 10 23 56 57
    LBRACE (282) 24
    RBRACE (283) 24
    COLON (284) 16 19 21 22 23
    COMMA (285) 28 61
    INT_LIT <int_val> (286) 52
    BOOL_LIT <bool_val> (287) 53
    IDENT <str_val> (288) 9 23 27 28 54 57
    UNARY (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    program <ast_node> (36)
        on left: 1
        on right: 0
    stmt_list <ast_node> (37)
        on left: 2 3
        on right: 1 3 24
    stmt <ast_node> (38)
        on left: 4 5
        on right: 3
    simple_stmt <ast_node> (39)
        on left: 6 7 8
        on right: 4
    assign_stmt <ast_node> (40)
        on left: 9
        on right: 6
    print_stmt <ast_node> (41)
        on left: 10
        on right: 7
    return_stmt <ast_node> (42)
        on left: 11 12
        on right: 8
    compound_stmt <ast_node> (43)
        on left: 13 14 15
        on right: 5
    if_stmt <ast_node> (44)
        on left: 16
        on right: 13
    elif_list <ast_node> (45)
        on left: 17 18
        on right: 16 18
    elif_clause <ast_node> (46)
        on left: 19
        on right: 18
    opt_else <ast_node> (47)
        on left: 20 21
        on right: 16
    while_stmt <ast_node> (48)
        on left: 22
        on right: 14
    func_def <ast_node> (49)
        on left: 23
        on right: 15
    block <ast_node> (50)
        on left: 24
        on right: 16 19 21 22 23
    opt_params <ast_node> (51)
        on left: 25 26
        on right: 23
    param_list <ast_node> (52)
        on left: 27 28
        on right: 26 28
    expr <ast_node> (53)
        on left: 29
        on right: 9 10 11 16 19 22 56 60 61
    or_expr <ast_node> (54)
        on left: 30 31
        on right: 29 31
    and_expr <ast_node> (55)
        on left: 32 33
        on right: 30 31 33
    not_expr <ast_node> (56)
        on left: 34 35
        on right: 32 33 35
    comparison_expr <ast_node> (57)
        on left: 36 37 38 39 40 41 42
        on right: 34 37 38 39 40 41 42
    add_expr <ast_node> (58)
        on left: 43 44 45
        on right: 36 37 38 39 40 41 42 44 45
    mult_expr <ast_node> (59)
        on left: 46 47 48 49
        on right: 43 44 45 47 48 49
    unary_expr <ast_node> (60)
        on left: 50 51
        on right: 46 47 48 49 51
    primary_expr <ast_node> (61)
        on left: 52 53 54 55 56
        on right: 50
    call_expr <ast_node> (62)
        on left: 57
        on right: 55
    opt_args <ast_node> (63)
        on left: 58 59
        on right: 57
    arg_list <ast_node> (64)
        on left: 60 61
        on right: 59 61


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list •
    3 stmt_list: stmt_list • stmt

    KW_IF      shift, and go to state 4
    KW_WHILE   shift, and go to state 5
    KW_DEF     shift, and go to state 6
    KW_RETURN  shift, and go to state 7
    KW_PRINT   shift, and go to state 8
    IDENT      shift, and go to state 9

    $default  reduce using rule 1 (program)

    stmt           go to state 10
    simple_stmt    go to state 11
    assign_stmt    go to state 12
    print_stmt     go to state 13
    return_stmt    go to state 14
    compound_stmt  go to state 15
    if_stmt        go to state 16
    while_stmt     go to state 17
    func_def       go to state 18


State 3

    0 $accept: program $end •

    $default  accept


State 4

   16 if_stmt: KW_IF • expr COLON block elif_list opt_else

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    expr             go to state 25
    or_expr          go to state 26
    and_expr         go to state 27
    not_expr         go to state 28
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 5

   22 while_stmt: KW_WHILE • expr COLON block

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    expr             go to state 35
    or_expr          go to state 26
    and_expr         go to state 27
    not_expr         go to state 28
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 6

   23 func_def: KW_DEF • IDENT LPAREN opt_params RPAREN COLON block

    IDENT  shift, and go to state 36


State 7

   11 return_stmt: KW_RETURN • expr
   12            | KW_RETURN •

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    IDENT     [reduce using rule 12 (return_stmt)]
    $default  reduce using rule 12 (return_stmt)

    expr             go to state 37
    or_expr          go to state 26
    and_expr         go to state 27
    not_expr         go to state 28
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 8

   10 print_stmt: KW_PRINT • LPAREN expr RPAREN

    LPAREN  shift, and go to state 38


State 9

    9 assign_stmt: IDENT • ASSIGN expr

    ASSIGN  shift, and go to state 39


State 10

    3 stmt_list: stmt_list stmt •

    $default  reduce using rule 3 (stmt_list)


State 11

    4 stmt: simple_stmt •

    $default  reduce using rule 4 (stmt)


State 12

    6 simple_stmt: assign_stmt •

    $default  reduce using rule 6 (simple_stmt)


State 13

    7 simple_stmt: print_stmt •

    $default  reduce using rule 7 (simple_stmt)


State 14

    8 simple_stmt: return_stmt •

    $default  reduce using rule 8 (simple_stmt)


State 15

    5 stmt: compound_stmt •

    $default  reduce using rule 5 (stmt)


State 16

   13 compound_stmt: if_stmt •

    $default  reduce using rule 13 (compound_stmt)


State 17

   14 compound_stmt: while_stmt •

    $default  reduce using rule 14 (compound_stmt)


State 18

   15 compound_stmt: func_def •

    $default  reduce using rule 15 (compound_stmt)


State 19

   35 not_expr: TOK_NOT • not_expr

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    not_expr         go to state 40
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 20

   51 unary_expr: TOK_MINUS • unary_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    unary_expr    go to state 41
    primary_expr  go to state 33
    call_expr     go to state 34


State 21

   56 primary_expr: LPAREN • expr RPAREN

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    expr             go to state 42
    or_expr          go to state 26
    and_expr         go to state 27
    not_expr         go to state 28
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 22

   52 primary_expr: INT_LIT •

    $default  reduce using rule 52 (primary_expr)


State 23

   53 primary_expr: BOOL_LIT •

    $default  reduce using rule 53 (primary_expr)


State 24

   54 primary_expr: IDENT •
   57 call_expr: IDENT • LPAREN opt_args RPAREN

    LPAREN  shift, and go to state 43

    $default  reduce using rule 54 (primary_expr)


State 25

   16 if_stmt: KW_IF expr • COLON block elif_list opt_else

    COLON  shift, and go to state 44


State 26

   29 expr: or_expr •
   31 or_expr: or_expr • TOK_OR and_expr

    TOK_OR  shift, and go to state 45

    $default  reduce using rule 29 (expr)


State 27

   30 or_expr: and_expr •
   33 and_expr: and_expr • TOK_AND not_expr

    TOK_AND  shift, and go to state 46

    $default  reduce using rule 30 (or_expr)


State 28

   32 and_expr: not_expr •

    $default  reduce using rule 32 (and_expr)


State 29

   34 not_expr: comparison_expr •
   37 comparison_expr: comparison_expr • TOK_EQ add_expr
   38                | comparison_expr • TOK_NE add_expr
   39                | comparison_expr • TOK_LT add_expr
   40                | comparison_expr • TOK_LE add_expr
   41                | comparison_expr • TOK_GT add_expr
   42                | comparison_expr • TOK_GE add_expr

    TOK_EQ  shift, and go to state 47
    TOK_NE  shift, and go to state 48
    TOK_LT  shift, and go to state 49
    TOK_LE  shift, and go to state 50
    TOK_GT  shift, and go to state 51
    TOK_GE  shift, and go to state 52

    $default  reduce using rule 34 (not_expr)


State 30

   36 comparison_expr: add_expr •
   44 add_expr: add_expr • TOK_PLUS mult_expr
   45         | add_expr • TOK_MINUS mult_expr

    TOK_PLUS   shift, and go to state 53
    TOK_MINUS  shift, and go to state 54

    $default  reduce using rule 36 (comparison_expr)


State 31

   43 add_expr: mult_expr •
   47 mult_expr: mult_expr • TOK_STAR unary_expr
   48          | mult_expr • TOK_SLASH unary_expr
   49          | mult_expr • TOK_MOD unary_expr

    TOK_STAR   shift, and go to state 55
    TOK_SLASH  shift, and go to state 56
    TOK_MOD    shift, and go to state 57

    $default  reduce using rule 43 (add_expr)


State 32

   46 mult_expr: unary_expr •

    $default  reduce using rule 46 (mult_expr)


State 33

   50 unary_expr: primary_expr •

    $default  reduce using rule 50 (unary_expr)


State 34

   55 primary_expr: call_expr •

    $default  reduce using rule 55 (primary_expr)


State 35

   22 while_stmt: KW_WHILE expr • COLON block

    COLON  shift, and go to state 58


State 36

   23 func_def: KW_DEF IDENT • LPAREN opt_params RPAREN COLON block

    LPAREN  shift, and go to state 59


State 37

   11 return_stmt: KW_RETURN expr •

    $default  reduce using rule 11 (return_stmt)


State 38

   10 print_stmt: KW_PRINT LPAREN • expr RPAREN

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    expr             go to state 60
    or_expr          go to state 26
    and_expr         go to state 27
    not_expr         go to state 28
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 39

    9 assign_stmt: IDENT ASSIGN • expr

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    expr             go to state 61
    or_expr          go to state 26
    and_expr         go to state 27
    not_expr         go to state 28
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 40

   35 not_expr: TOK_NOT not_expr •

    $default  reduce using rule 35 (not_expr)


State 41

   51 unary_expr: TOK_MINUS unary_expr •

    $default  reduce using rule 51 (unary_expr)


State 42

   56 primary_expr: LPAREN expr • RPAREN

    RPAREN  shift, and go to state 62


State 43

   57 call_expr: IDENT LPAREN • opt_args RPAREN

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    $default  reduce using rule 58 (opt_args)

    expr             go to state 63
    or_expr          go to state 26
    and_expr         go to state 27
    not_expr         go to state 28
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34
    opt_args         go to state 64
    arg_list         go to state 65


State 44

   16 if_stmt: KW_IF expr COLON • block elif_list opt_else

    LBRACE  shift, and go to state 66

    block  go to state 67


State 45

   31 or_expr: or_expr TOK_OR • and_expr

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    and_expr         go to state 68
    not_expr         go to state 28
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 46

   33 and_expr: and_expr TOK_AND • not_expr

    TOK_NOT    shift, and go to state 19
    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    not_expr         go to state 69
    comparison_expr  go to state 29
    add_expr         go to state 30
    mult_expr        go to state 31
    unary_expr       go to state 32
    primary_expr     go to state 33
    call_expr        go to state 34


State 47

   37 comparison_expr: comparison_expr TOK_EQ • add_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    add_expr      go to state 70
    mult_expr     go to state 31
    unary_expr    go to state 32
    primary_expr  go to state 33
    call_expr     go to state 34


State 48

   38 comparison_expr: comparison_expr TOK_NE • add_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    add_expr      go to state 71
    mult_expr     go to state 31
    unary_expr    go to state 32
    primary_expr  go to state 33
    call_expr     go to state 34


State 49

   39 comparison_expr: comparison_expr TOK_LT • add_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    add_expr      go to state 72
    mult_expr     go to state 31
    unary_expr    go to state 32
    primary_expr  go to state 33
    call_expr     go to state 34


State 50

   40 comparison_expr: comparison_expr TOK_LE • add_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    add_expr      go to state 73
    mult_expr     go to state 31
    unary_expr    go to state 32
    primary_expr  go to state 33
    call_expr     go to state 34


State 51

   41 comparison_expr: comparison_expr TOK_GT • add_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    add_expr      go to state 74
    mult_expr     go to state 31
    unary_expr    go to state 32
    primary_expr  go to state 33
    call_expr     go to state 34


State 52

   42 comparison_expr: comparison_expr TOK_GE • add_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    add_expr      go to state 75
    mult_expr     go to state 31
    unary_expr    go to state 32
    primary_expr  go to state 33
    call_expr     go to state 34


State 53

   44 add_expr: add_expr TOK_PLUS • mult_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    mult_expr     go to state 76
    unary_expr    go to state 32
    primary_expr  go to state 33
    call_expr     go to state 34


State 54

   45 add_expr: add_expr TOK_MINUS • mult_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    mult_expr     go to state 77
    unary_expr    go to state 32
    primary_expr  go to state 33
    call_expr     go to state 34


State 55

   47 mult_expr: mult_expr TOK_STAR • unary_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    unary_expr    go to state 78
    primary_expr  go to state 33
    call_expr     go to state 34


State 56

   48 mult_expr: mult_expr TOK_SLASH • unary_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    unary_expr    go to state 79
    primary_expr  go to state 33
    call_expr     go to state 34


State 57

   49 mult_expr: mult_expr TOK_MOD • unary_expr

    TOK_MINUS  shift, and go to state 20
    LPAREN     shift, and go to state 21
    INT_LIT    shift, and go to state 22
    BOOL_LIT   shift, and go to state 23
    IDENT      shift, and go to state 24

    unary_expr    go to state 80
    primary_expr  go to state 33
    call_expr     go to state 34


State 58

   22 while_stmt: KW_WHILE expr COLON • block

    LBRACE  shift, and go to state 66

    block  go to state 81


State 59

   23 func_def: KW_DEF IDENT LPAREN • opt_params RPAREN COLON block

    IDENT  shift, and go to state 82

    $default  reduce using rule 25 (opt_params)

    opt_params  go to state 83
    param_list  go to state 84


State 60

   10 print_stmt: KW_PRINT LPAREN expr • RPAREN

    RPAREN  shift, and go to state 85


State 61

    9 assign_stmt: IDENT ASSIGN expr •

    $default  reduce using rule 9 (assign_stmt)


State 62

   56 primary_expr: LPAREN expr RPAREN •

    $default  reduce using rule 56 (primary_expr)


State 63

   60 arg_list: expr •

    $default  reduce using rule 60 (arg_list)


State 64

   57 call_expr: IDENT LPAREN opt_args • RPAREN

    RPAREN  shift, and go to state 86


State 65

   59 opt_args: arg_list •
   61 arg_list: arg_list • COMMA expr

    COMMA  shift, and go to state 87

    $default  reduce using rule 59 (opt_args)

